--- a/package.json
+++ b/package.json
@@ -1,9 +1,48 @@
 {
+  "private": true,
   "name": "gemini",
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
   "workspaces": [
     "packages/*/*"
+  ],
+  "scripts": {
+    "storybook": "start-storybook -p 9009 --ci",
+    "dev": "yarn storybook",
+    "build": "parcel build 'packages/*/*' --no-cache"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
+    "@parcel/packager-ts": "2.8.3",
+    "@parcel/transformer-typescript-types": "2.8.3",
+    "@storybook/addon-storysource": "^7.0.7",
+    "@storybook/react": "6.5.16",
+    "@types/eslint": "^8.37.0",
+    "@types/jest": "^29.5.1",
+    "@types/jest-axe": "^3.5.5",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "eslint": "^8.39.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.5.0",
+    "jest-axe": "^7.0.1",
+    "parcel": "^2.8.3",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "singleQuote": true
+  },
+  "eslintIgnore": [
+    "node_modules",
+    "dist"
   ]
 }
