--- a/packages/react/toggle/package.json
+++ b/packages/react/toggle/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gemini-ui/react-toggle",
+  "name": "@allen0318563/react-toggle",
   "version": "1.0.0",
   "source": "src/index.ts",
   "main": "dist/index.js",
