--- a/package.json
+++ b/package.json
@@ -8,22 +8,33 @@
     "packages/*/*"
   ],
   "scripts": {
-    "storybook": "start-storybook -p 9009 --ci",
+    "storybook": "storybook dev -p 6006",
     "dev": "yarn storybook",
     "build": "parcel build 'packages/*/*' --no-cache",
     "publish:stable": "yarn clean && yarn build && yarn workspaces foreach -pv --exclude gemini npm publish --tolerate-republish --access public",
-    "clean": "yarn workspaces foreach -pv --exclude gemini run clean"
+    "clean": "yarn workspaces foreach -pv --exclude gemini run clean",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.5",
+    "@babel/plugin-transform-typescript": "^7.21.3",
     "@babel/preset-react": "^7.18.6",
+    "@parcel/babel-plugin-transform-runtime": "^2.8.3",
+    "@parcel/babel-preset-env": "^2.8.3",
     "@parcel/packager-ts": "2.8.3",
     "@parcel/transformer-typescript-types": "2.8.3",
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/addon-interactions": "^7.0.9",
+    "@storybook/addon-links": "^7.0.9",
     "@storybook/addon-storysource": "^7.0.7",
-    "@storybook/react": "6.5.16",
+    "@storybook/blocks": "^7.0.9",
+    "@storybook/react": "^7.0.9",
+    "@storybook/react-webpack5": "^7.0.9",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/eslint": "^8.37.0",
     "@types/jest": "^29.5.1",
     "@types/jest-axe": "^3.5.5",
@@ -31,6 +42,7 @@
     "@types/react-dom": "^18.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "babel-loader": "^9.1.2",
     "eslint": "^8.39.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
@@ -39,6 +51,8 @@
     "jest-axe": "^7.0.1",
     "parcel": "^2.8.3",
     "prettier": "^2.8.8",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.9",
     "typescript": "^5.0.4"
   },
   "prettier": {
