--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "^5.59.1",
     "babel-loader": "^9.1.2",
     "eslint": "^8.39.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -61,12 +62,11 @@
   },
   "eslintConfig": {
     "extends": [
-      "plugin:jsx-a11y/recommended",
-      "plugin:@typescript-eslint/recommended"
+      "react-app",
+      "plugin:jsx-a11y/recommended"
     ],
     "plugins": [
-      "jsx-a11y",
-      "@typescript-eslint"
+      "jsx-a11y"
     ]
   },
   "eslintIgnore": [
