--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "packages/*/*"
   ],
   "scripts": {
+    "test": "jest",
     "storybook": "storybook dev -p 6006",
     "dev": "yarn storybook",
     "build": "parcel build 'packages/*/*' --no-cache",
@@ -35,6 +36,8 @@
     "@storybook/react": "^7.0.9",
     "@storybook/react-webpack5": "^7.0.9",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/eslint": "^8.37.0",
     "@types/jest": "^29.5.1",
     "@types/jest-axe": "^3.5.5",
@@ -50,11 +53,23 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
     "jest-axe": "^7.0.1",
+    "jest-environment-jsdom": "^29.5.0",
     "parcel": "^2.8.3",
     "prettier": "^2.8.8",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.9",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect",
+      "jest-axe/extend-expect"
+    ]
   },
   "prettier": {
     "printWidth": 100,
