--- a/packages/react/presence/package.json
+++ b/packages/react/presence/package.json
@@ -11,7 +11,8 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.8 || ^17.0 || ^18.0"
+    "react": "^16.8 || ^17.0 || ^18.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0"
   },
   "dependencies": {
     "@allen0318563/react-use-controllable-state": "workspace:*",
